# eye-tracker-app

./: .gitignore  README.md  pyproject.toml  run.py  run.spec  setup.cfg
.github/workflows/: python-app-windows-linux.yml  python-app-windows.yml
app/: localization.py  main.py  serial.py  video_capture.py  window_actions.py
tests/: test_localization.py  test_serial.py  test_video_capture.py  test_window_actions.py
translations/: messages.pot
translations/zh/LC_MESSAGES/: messages.mo  messages.po
