[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eye_tracker_app"
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.md"
authors = [
  {name = "Richard", email = "1625351+richardzone@users.noreply.github.com"}]
dependencies = ["PyAutoGUI>=0.9.54", "pyserial>=3.5"]  # List your dependencies here, e.g., ["requests>=2.24", "numpy"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
eye-tracker = "app.main:gui_main"

[project.optional-dependencies]
# Optional dependencies, can be installed via "your_project_name[development]"
development = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "Babel>=2.15.0",
    "pyinstaller>=6.6.0",
    "flake8>=7.0.0"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
