[metadata]
name = eye_tracker_app
author = Richard
author_email = 1625351+richardzone@users.noreply.github.com
description = A Python application for eye tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/richardzone/eye_tracker_app
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    PyAutoGUI==0.9.54
    pyserial==3.5
    opencv-python==4.5.1.48
    opencv-contrib-python==4.5.1.48
    pillow==10.3.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    eye-tracker = app.main:gui_main

[options.extras_require]
development =
    pytest>=8.2.0
    pytest-cov>=5.0.0
    Babel>=2.15.0
    pyinstaller>=6.6.0
    flake8>=7.0.0

[tool:pytest]
addopts =
    --import-mode=importlib
